Some refactoring. (#901)